--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <header>
-      
+     
  <h1>   Tarea de Html de Daniel Perco </h1>
+ <link rel="stylesheet" href="externo.css">
 </header>
 <body>
-      <div>
+      <div class="divClass">
           <hi>   Daniel  Perco </hi>
       </div>
 
-      <div>
+      <div  class="divClass">
           <h3>     Henry  </h3>
-              <span>  me gusta el asado </span>
+              <span id="spanId"style="color: #0087;margin: 50px;">  Me gusta el asado </span>
               <a href="https://parrillaargentum.negocio.site/?utm_source=gmb&utm_medium=referral"> es un link !   </a>
       </div>
 
-      <div>
+      <div id="thirdDiv" >
               <h4>     Tarea de   HTML / CSS </h4>
               <ul>
                    <li>
                        <span>  Una buenas costillas  </span>
-                       <img src="D:\cursos_2020\pagina_web_propia\costillas.jpg">
+                       <img src="D:\cursos_2020\pagina_web_propia\costillas.jpg" >
                    </li>
                    <li>
                         <span> Para  acompañar papas con huevo revuelto </span>
-                        <img src="D:\cursos_2020\pagina_web_propia\papas_con_huevo.jpg">
+                        <img src="D:\cursos_2020\pagina_web_propia\papas_con_huevo.jpg" >
                    </li>
 
               </ul>
